<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/rgCameras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/camera0_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioClicked"
            android:text="@string/camera0_radio_button"
            android:textAppearance="?android:textAppearanceMedium" />

        <RadioButton
            android:id="@+id/camera1_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioClicked"
            android:text="@string/camera1_radio_button"
            android:textAppearance="?android:textAppearanceMedium" />

        <RadioButton
            android:id="@+id/camera2_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioClicked"
            android:text="@string/camera2_radio_button"
            android:textAppearance="?android:textAppearanceMedium" />

    </RadioGroup>

    <Spinner
        android:id="@+id/spinnerResolution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rgCameras"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btnOk"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/ok" />

</RelativeLayout>