<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_row="0"
        android:layout_column="0"
        android:text="permission" />

    <TextView
        android:layout_row="0"
        android:layout_column="1"
        android:text=" status " />

    <TextView
        android:layout_row="0"
        android:layout_column="2"
        android:text="explain" />

    <TextView
        android:layout_row="1"
        android:layout_column="0"
        android:text="CAMERA" />

    <TextView
        android:id="@+id/camera_perm_status"
        android:layout_row="1"
        android:layout_column="1"
        android:text=" denied "
        android:textColor="#ff0000" />

    <TextView
        android:layout_width="0dp"
        android:layout_row="1"
        android:layout_column="2"
        android:layout_gravity="fill_horizontal"
        android:text="@string/explain_CAMERA" />

    <TextView
        android:layout_row="2"
        android:layout_column="0"
        android:text="READ_EXTERNAL_STORAGE" />

    <TextView
        android:id="@+id/read_storage_perm_status"
        android:layout_row="2"
        android:layout_column="1"
        android:text=" denied "
        android:textColor="#ff0000" />

    <TextView
        android:layout_width="0dp"
        android:layout_row="2"
        android:layout_column="2"
        android:layout_gravity="fill_horizontal"
        android:text="@string/explain_EXTERNAL_STORAGE" />

    <TextView
        android:layout_row="3"
        android:layout_column="0"
        android:text="WRITE_EXTERNAL_STORAGE" />

    <TextView
        android:id="@+id/write_storage_perm_status"
        android:layout_row="3"
        android:layout_column="1"
        android:text=" denied "
        android:textColor="#ff0000" />

    <TextView
        android:layout_width="0dp"
        android:layout_row="3"
        android:layout_column="2"
        android:layout_gravity="fill_horizontal"
        android:text="@string/explain_EXTERNAL_STORAGE" />

    <TextView
        android:layout_row="4"
        android:layout_column="0"
        android:text="READ_PHONE_STATE" />

    <TextView
        android:id="@+id/read_phone_perm_status"
        android:layout_row="4"
        android:layout_column="1"
        android:text=" denied "
        android:textColor="#ffff00" />

    <TextView
        android:layout_width="0dp"
        android:layout_row="4"
        android:layout_column="2"
        android:layout_gravity="fill_horizontal"
        android:text="@string/explain_READ_PHONE_STATE" />

    <Button
        android:id="@+id/button123"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="1"
        android:text="Button" />

</GridLayout>